--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,10 @@ sudo: required
 services:
   - docker
 
-before_script:
+after_success:
   - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-
-script:
-  - docker build -t vuzoll/vuzoll-ingest-vk-data .
-  - docker push vuzoll/vuzoll-ingest-vk-data
+  - export DOCKER_REPO=vuzoll/vuzoll-ingest-vk-data
+  - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH | tr '/' '-' ; fi`
+  - docker build -t $DOCKER_REPO:travis-$TRAVIS_BUILD_NUMBER .
+  - docker tag $DOCKER_REPO:travis-$TRAVIS_BUILD_NUMBER $DOCKER_REPO:$TAG
+  - docker push $DOCKER_REPO
