--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,11 @@ services:
   - docker
 
 script:
-  - ;
-
-after_success:
   - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
   - export DOCKER_REPO=vuzoll/vuzoll-ingest-vk-data
-  - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH | tr '/' '-' ; fi`
-  - docker build -t $DOCKER_REPO:travis-$TRAVIS_BUILD_NUMBER .
+  - docker build -t $DOCKER_REPO:travis-$TRAVIS_BUILD_NUMBER
+
+after_success:
+  - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH | tr '/' '-' ; fi`.
   - docker tag $DOCKER_REPO:travis-$TRAVIS_BUILD_NUMBER $DOCKER_REPO:$TAG
   - docker push $DOCKER_REPO
