--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ services:
 script:
   - docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
 
-after_success:
+after_script:
   - export DOCKER_REPO=vuzoll/vuzoll-ingest-vk-data
-  - docker build -t $DOCKER_REPO:travis-$TRAVIS_BUILD_NUMBER
-  - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH | tr '/' '-' ; fi`.
+  - export TAG=`if [ "$TRAVIS_BRANCH" == "master" ]; then echo "latest"; else echo $TRAVIS_BRANCH | tr '/' '-' ; fi`
+  - docker build -t $DOCKER_REPO:travis-$TRAVIS_BUILD_NUMBER .
   - docker tag $DOCKER_REPO:travis-$TRAVIS_BUILD_NUMBER $DOCKER_REPO:$TAG
   - docker push $DOCKER_REPO
