--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ dependencies {
 
     compile 'org.codehaus.groovy:groovy-all'
 
+    compile 'org.slf4j:slf4j-api'
+    compile 'ch.qos.logback:logback-classic'
+
     compile 'com.vk.api:sdk:0.3.6'
 }
 
