--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     compile 'ch.qos.logback:logback-classic'
 
     compile 'com.vk.api:sdk:0.3.6'
+
+    compile 'joda-time:joda-time'
 }
 
 apply plugin: 'application'
