--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'groovy'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 
-version = '0.4'
+version = '0.5-SNAPSHOT'
 
 repositories {
     jcenter()
