--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     compile 'org.slf4j:slf4j-api'
     compile 'ch.qos.logback:logback-classic'
 
+    compile 'org.apache.commons:commons-lang3:3.5'
+
     compile 'joda-time:joda-time'
 
     compile 'com.vk.api:sdk:0.3.6'
