--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,10 @@
-buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'org.springframework.boot:spring-boot-gradle-plugin:1.4.2.RELEASE'
-    }
-}
-
 plugins {
     id 'com.gradle.build-scan' version '1.4'
-}
-
-buildScan {
-    licenseAgreementUrl = 'https://gradle.com/terms-of-service'
-    licenseAgree = 'yes'
+    id 'org.springframework.boot' version '1.4.3.RELEASE'
 }
 
 apply plugin: 'groovy'
 apply plugin: 'idea'
-apply plugin: 'org.springframework.boot'
 
 version = '0.5-SNAPSHOT'
 
@@ -40,6 +26,11 @@ dependencies {
     compile 'joda-time:joda-time'
 
     compile 'com.vk.api:sdk:0.3.6'
+}
+
+buildScan {
+    licenseAgreementUrl = 'https://gradle.com/terms-of-service'
+    licenseAgree = 'yes'
 }
 
 apply plugin: 'application'
