--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 apply plugin: 'groovy'
 apply plugin: 'idea'
 
-version = '0.5-SNAPSHOT'
+version = '0.5'
 
 repositories {
     jcenter()
