#70. various minor fixes

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ buildScan {
     licenseAgree = 'yes'
 }
 
+apply plugin: 'application'
+
 bootRepackage {
     mainClass = 'com.github.vuzoll.ingestvk.Application'
 }
