--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,10 @@
 plugins {
     id 'com.gradle.build-scan' version '1.6'
+
     id 'org.springframework.boot' version '1.5.2.RELEASE'
+
+    id 'jacoco'
+    id 'com.github.kt3k.coveralls' version '2.8.1'
 }
 
 apply plugin: 'groovy'
@@ -32,11 +36,22 @@ dependencies {
     compile 'joda-time:joda-time'
 
     compile 'com.vk.api:sdk:0.4.3'
+
+    testCompile 'org.spockframework:spock-core:1.0-groovy-2.4'
+    testRuntime 'cglib:cglib-nodep:3.1'
+    testRuntime 'org.objenesis:objenesis:2.1'
 }
 
 buildScan {
     licenseAgreementUrl = 'https://gradle.com/terms-of-service'
     licenseAgree = 'yes'
+}
+
+jacocoTestReport {
+    reports {
+        xml.enabled = true
+        html.enabled = true
+    }
 }
 
 apply plugin: 'application'
