--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ version = '0.6-SNAPSHOT'
 repositories {
     jcenter()
     maven {
-        url 'https://dl.bintray.com/vuzoll/vuzoll-maven/'
+        url 'https://dl.bintray.com/yermilov/yermilov-maven/'
     }
     mavenLocal()
 }
@@ -25,7 +25,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.data:spring-data-mongodb'
 
-    compile 'com.github.vuzoll:vuzoll-tasks-manager-starter:0.4'
+    compile 'io.github.yermilov:kerivnyk:0.6.2'
 
     compile 'org.slf4j:slf4j-api'
     compile 'ch.qos.logback:logback-classic'
